--- a/style.css
+++ b/style.css
@@ -1,48 +1,99 @@
+section {
+    margin-bottom: 130px;
+}
 
 /* header-section */
-.text-align{
+.text-align {
     text-align: right;
     margin-right: 280px;
     padding-top: 190px;
 }
-.btn-primary{
+
+.btn-primary {
     background-color: #F15B22;
     border-radius: 5px;
     padding: 6px;
     color: #FFFFFF;
-    border: none;   
+    border: none;
 }
-.banner-section{
+
+.banner-section {
     background-image: url('images/banner/banner2.png');
     background-size: cover;
-    background-repeat:no-repeat ;
+    background-repeat: no-repeat;
     width: 1500px;
     height: 800px;
     top: 0;
 }
+
 /* second-part */
-.second-part{
+.second-part {
     display: flex;
     gap: 80px;
 }
-.text-align2{
+
+.text-align2 {
     padding-top: 220px;
 }
-img{
+
+img {
     margin-left: 200px;
 }
+
 /* third section */
-.icons-section{
-    display: flex; 
+.icons-section {
+    display: flex;
     gap: 2px;
 }
-h1{
+
+h1 {
     text-align: center;
     padding-bottom: 20px;
 }
-h2{
-    margin-left: 140px;  
+
+h2 {
+    margin-left: 140px;
 }
-small{
+
+small {
     margin-left: 160px;
 }
+
+/* fourth section */
+.interest-section {
+    margin-left: 140px;
+    padding-top: 150px;
+    width: 82%;
+    background-image: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%), url('images/watch.png');
+
+    border-radius: 8px;
+
+
+}
+
+.text-section {
+    margin-left: 76px;
+    padding-bottom: 50px;
+    color: #FFFFFF;
+}
+
+.btn-section {
+    color: #F15B22;
+    border-radius: 5px;
+    margin-left: 5px;
+    /* padding-bottom: 20px; */
+    border: none;
+    padding-bottom: 4px;
+}
+
+.happy-new-year {
+    width: 120px;
+    margin-top: 70px;
+}
+
+.strong-section {
+    text-align: center;
+    margin-top: 30px;
+}
+
+/* future plan */
